--- a/aedwt.yaml
+++ b/aedwt.yaml
@@ -4,9 +4,9 @@ info:
   version: 1.0.0
   description: API for retrieving the queue time for A&E departments in Hong Kong hospitals.
 servers:
-  - url: https://www.ha.org.hk/aedwt/data/aedWtData.json
+  - url: https://www.ha.org.hk/aedwt/data
 paths:
-  /:
+  /aedWtData.json:
     get:
       summary: Get the queue time for A&E departments in Hong Kong hospitals.
       responses:
